objects/Snippet__c.object
<CustomObject>
    <description>The object stores the values of labels and messages which are displayed on the user interface.</description>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the value of the snippet is usable or not.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <defaultValue>&apos;Global&apos;</defaultValue>
        <description>Where the snippet is used. If it used in a single location (eg. a unique page element) then enter the page name. If it is used in multiple locations, enter &apos;Global&apos;.</description>
        <inlineHelpText>Where the snippet is used. If it used in a single location (eg. a unique page element) then enter the page name. If it is used in multiple locations, enter &apos;Global&apos;.</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PermissionSetNames__c</fullName>
        <description>A comma separated list of names of the permission sets for which this value should be visible. The field should be left blank if the snippet is desired to be visible to all permission sets.</description>
        <inlineHelpText>A comma separated list of names of the permission sets for which this value should be visible. The field should be left blank if the snippet is desired to be visible to all permission sets.</inlineHelpText>
        <label>Permission Set Names</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MRS_InsureLegalRep</fullName>
                </value>
                <value>
                    <fullName>MRS_Worker</fullName>
                </value>
                <value>
                    <fullName>MRS_SolePractitioner</fullName>
                </value>
                <value>
                    <fullName>MRS_InternalUser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SnippetName__c</fullName>
        <description>The name of the snippet.</description>
        <label>Snippet Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueNameValidation__c</fullName>
        <description>When a snippet is saved, the Unique Name value is copied into this field. This field enforces case-insensitive uniqueness (formulas do not) so that saving a duplicate Unique Name is prevented.</description>
        <externalId>true</externalId>
        <inlineHelpText>When a snippet is saved, the Unique Name value is copied into this field. This field enforces case-insensitive uniqueness (formulas do not) so that saving a duplicate Unique Name is prevented.</inlineHelpText>
        <label>Unique Name Validation</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <description>The combination of Location and Name fields to create the Unique Name</description>
        <formula>LOWER( 
  IF(ISBLANK(Location__c), &apos;Global/&apos;, Location__c + &apos;/&apos; ) + IF(ISBLANK(SnippetName__c), &apos;&apos;, SnippetName__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The combination of Location and Name fields to create the Unique Name</inlineHelpText>
        <label>Unique Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The value of the label or message that needs to be displayed.</description>
        <inlineHelpText>The value of the label or message that needs to be displayed.</inlineHelpText>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Snippet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SnippetName__c</columns>
        <columns>IsActive__c</columns>
        <columns>Location__c</columns>
        <columns>UniqueNameValidation__c</columns>
        <columns>UniqueName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SN-{00000000}</displayFormat>
        <label>Snippet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snippets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>